Functional probability / decision model. Added support for an 'ignore' file.